--- a/Src/Lecoati.LeBlender.Extension/Lecoati.leblender.Extension.csproj
+++ b/Src/Lecoati.LeBlender.Extension/Lecoati.leblender.Extension.csproj
@@ -172,6 +172,7 @@
   <ItemGroup>
     <Compile Include="Controllers\LeBlenderController.cs" />
     <Compile Include="Controllers\LeBlenderEditorManagerTreeController.cs" />
+    <Compile Include="Initialization\LeblenderComposer.cs" />
     <Compile Include="Models\GridEditorsConfig\Editor.cs" />
     <Compile Include="Models\GridEditorsConfig\GridEditorsConfig.cs" />
     <Compile Include="Models\Manifest\PackageManifest.cs" />
@@ -182,7 +183,7 @@
     <Compile Include="Controllers\HelperController.cs" />
     <Compile Include="Controllers\PropertyGridEditorController.cs" />
     <Compile Include="Controllers\DataTypeController.cs" />
-    <Compile Include="Events\UmbracoEvents.cs" />
+    <Compile Include="Initialization\ApplicationInitializer.cs" />
     <Compile Include="JSonPresentationFormatter.cs" />
     <Compile Include="LeBlenderPartialCacher.cs" />
     <Compile Include="Models\GridEditor.cs" />
